<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.medialert_project.ui.auth.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.medialert_project.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard_title"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboardFragment_to_addEditMedicineFragment"
            app:destination="@id/addEditMedicineFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEditMedicineFragment"
        android:name="com.example.medialert_project.ui.medicine.AddEditMedicineFragment"
        android:label="@string/add_medicine_title"
        tools:layout="@layout/fragment_add_edit_medicine">
        <argument
            android:name="medicineId"
            app:argType="string"
            app:nullable="true" />
    </fragment>
</navigation>
